# tremulous

./: .gitignore  Makefile  README.md  TODO
.github/workflows/: build-linux.yml  build-macos.yml  build-packages.yml  build-windows.yml
assets/ui/: ingame_leave.menu  joinserver.menu  main.menu  menudef.h
misc/: download-paks.sh  io.github.grangerhub.Tremulous.appdata.xml  io.github.grangerhub.Tremulous.desktop
src/cgame/: cg_draw.c  cg_local.h  cg_main.c  cg_public.h  cg_syscalls.c
src/client/: CMakeLists.txt  cl_cgame.cpp  cl_console.cpp  cl_curl.cpp  cl_curl.h  cl_keys.cpp  cl_main.cpp  cl_parse.cpp  cl_rest.cpp  cl_ui.cpp  cl_updates.cpp  cl_xhr.cpp  client.h  snd_codec.h  snd_main.cpp
src/game/: bg_alloc.c  bg_misc.c  bg_pmove.c  bg_public.h  bg_slidemove.c  bg_voice.c  g_local.h  g_public.h
src/null/: null_client.cpp  null_input.cpp  null_snddma.cpp
src/qcommon/: CMakeLists.txt  cmd.cpp  common.cpp  crypto.cpp  crypto.h  cvar.cpp  cvar.h  files.cpp  files.h  json.cpp  json.h  net_chan.cpp  net_ip.cpp  q3_lauxlib.cpp  q_platform.h  q_shared.h  qcommon.h  vm.cpp  vm_js.js  vm_local.h
src/renderercommon/: tr_common.h  tr_font.cpp  tr_image_png.cpp  tr_public.h
src/renderergl1/: tr_init.cpp  tr_local.h
src/renderergl2/: tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_dsa.h  tr_extensions.cpp  tr_glsl.cpp  tr_image.cpp  tr_image_dds.cpp  tr_init.cpp  tr_local.h
src/script/: cmd.h  cvar.h  http_client.h
src/sdl/: sdl_gamma.cpp  sdl_glimp.cpp  sdl_input.cpp
src/server/: CMakeLists.txt  server.h  sv_ccmds.cpp  sv_client.cpp  sv_init.cpp  sv_net_chan.cpp
(+27 files in other folders)
